comment out Lucky Chests

--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -1278,8 +1278,6 @@ async function fetchAvatarPath(userName) {
 
 
 
-
-
 async function finishTask(currentUser, task, selectedDate) {
   const today = selectedDate || new Date().toISOString().split("T")[0];
   const adminEmail = localStorage.getItem("currentAdminEmail");
@@ -1326,12 +1324,58 @@ async function finishTask(currentUser, task, selectedDate) {
     if (!response.ok) {
       throw new Error(data.error || `HTTP error ${response.status}`);
     }
-    
+
     console.log("✅ finishTask: Task submitted", data);
     popup.textContent = `Task Submitted! Waiting for Parent Review`;
+
+    // Update the specific task's turn display immediately
+    const taskItems = document.querySelectorAll(".task-item");
+    taskItems.forEach(taskItem => {
+      if (taskItem.querySelector("strong").textContent === task.title) {
+        const isRotation = task.settings?.includes("Rotation");
+        if (isRotation && data.currentTurnIndex !== undefined && data.nextUser) {
+          // Update turn information
+          let turnHTML = `<strong>${task.title}</strong><br>`;
+          if (data.nextUser !== "—") {
+            const nextTurnIndex = (data.currentTurnIndex + 1) % task.users.length;
+            const nextNextUser = task.users[nextTurnIndex] || "—";
+            turnHTML += `Turn: ${data.nextUser}<br>Next: ${nextNextUser}<br>`;
+          } else {
+            turnHTML += `<span style="color: green;">Turn: All done!</span><br>`;
+          }
+          turnHTML += `Buzz Points: ${task.reward || 0} 🍯<br>`;
+          // Recalculate progress
+          const turnData = mixedTurnData(task, today);
+          const userTurns = turnData.turns.filter(turn => turn.user === currentUser);
+          const userTotal = userTurns.reduce((sum, turn) => sum + (turn.isCompleted || turn.isPending ? 1 : 0), 0);
+          const userRequiredTimes = userTurns.length;
+          turnHTML += `Progress: ${userTotal}/${userRequiredTimes}<br>`;
+          taskItem.innerHTML = turnHTML;
+
+          // Reattach the Finish Task button if still applicable
+          const isToday = today === new Date().toLocaleDateString("sv-SE");
+          let canFinish = false;
+          if (isToday && userTotal < userRequiredTimes) {
+            const activeTurn = turnData.turns.find(turn => !turn.isCompleted && !turn.isPending);
+            canFinish = activeTurn?.user === currentUser;
+          }
+          if (canFinish) {
+            const finishBtn = document.createElement("button");
+            finishBtn.className = "finished-btn";
+            finishBtn.textContent = "Finish Task";
+            finishBtn.addEventListener("click", (e) => {
+              e.stopPropagation();
+              finishTask(currentUser, task, today);
+            });
+            taskItem.appendChild(finishBtn);
+          }
+        }
+      }
+    });
+
     setTimeout(() => {
       popup.remove();
-      loadUserTasks(currentUser, today); // Reload tasks to reflect pending status
+      loadUserTasks(currentUser, today); // Full refresh to ensure consistency
     }, 2000);
   } catch (err) {
     console.error("🔥 finishTask: Error submitting task", err);
@@ -1343,6 +1387,123 @@ async function finishTask(currentUser, task, selectedDate) {
     }, 3000);
   }
 }
+
+async function loadUserTasks(userName, selectedDate = new Date().toLocaleDateString("sv-SE")) {
+  const userTasksDiv = document.getElementById("userTasks");
+  userTasksDiv.innerHTML = "<p>Loading tasks...</p>";
+
+  const adminEmail = localStorage.getItem("currentAdminEmail");
+  let tasks = [];
+
+  try {
+    const res = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
+    const data = await res.json();
+    if (!res.ok) throw new Error(data.error || "Failed to fetch tasks");
+    tasks = data.tasks || [];
+
+    console.log("loadUserTasks tasks:", tasks.map(t => ({
+      title: t.title,
+      date: t.date,
+      daysOfWeek: t.daysOfWeek,
+      specificDays: t.specificDays,
+      users: t.users,
+      currentTurnIndex: t.currentTurnIndex
+    })));
+  } catch (err) {
+    console.error("Failed to fetch tasks from server:", err);
+    userTasksDiv.innerHTML = "<p>Failed to load tasks. Please try again later.</p>";
+    return;
+  }
+
+  const userTasks = filterTasksForDate(tasks, selectedDate).filter(task => {
+    if (!task || !task.users || !task.title || !task.date) return false;
+    return task.users.includes(userName);
+  });
+
+  userTasksDiv.innerHTML = "";
+  if (userTasks.length === 0) {
+    userTasksDiv.innerHTML = "<p>No tasks assigned to this bee.</p>";
+    return;
+  }
+
+  for (const task of userTasks) {
+    const taskDiv = document.createElement("div");
+    taskDiv.className = "task-item";
+
+    const isRotation = task.settings?.includes("Rotation");
+    let turnData;
+
+    if (isRotation) {
+      if (typeof mixedTurnData !== 'function') {
+        console.error(`mixedTurnData is not defined for task: ${task.title}`);
+        turnData = { turns: [], completedCount: 0, requiredTimes: 1 };
+      } else {
+        // Pass currentTurnIndex to mixedTurnData to ensure alignment
+        turnData = mixedTurnData({ ...task, currentTurnIndex: task.currentTurnIndex }, selectedDate);
+      }
+    } else {
+      if (typeof individualTurnData !== 'function') {
+        console.error(`individualTurnData is not defined for task: ${task.title}`);
+        turnData = { turns: [], completedCount: 0, requiredTimes: 1 };
+      } else {
+        turnData = individualTurnData(task, selectedDate);
+      }
+    }
+
+    const userTurns = turnData.turns.filter(turn => turn.user === userName);
+    const userTotal = userTurns.reduce((sum, turn) => sum + (turn.isCompleted || turn.isPending ? 1 : 0), 0);
+    const userRequiredTimes = isRotation ? userTurns.length : turnData.requiredTimes;
+    const isCompleted = userTotal >= userRequiredTimes;
+
+    let taskHTML = `<strong>${task.title}</strong><br>`;
+
+    if (isRotation) {
+      const activeTurn = turnData.turns.find(turn => !turn.isCompleted && !turn.isPending);
+      if (activeTurn) {
+        const nextTurnIndex = (activeTurn.index + 1) % task.users.length;
+        const nextUser = turnData.turns.find(t => t.index === nextTurnIndex)?.user || task.users[nextTurnIndex] || "—";
+        taskHTML += `Turn: ${activeTurn.user}<br>Next: ${nextUser}<br>`;
+      } else {
+        taskHTML += `<span style="color: green;">Turn: All done!</span><br>`;
+      }
+    }
+
+    taskHTML += `Buzz Points: ${task.reward || 0} 🍯<br>`;
+    taskHTML += `Progress: ${userTotal}/${userRequiredTimes}<br>`;
+
+    taskDiv.innerHTML = taskHTML;
+
+    const todayStr = new Date().toLocaleDateString("sv-SE");
+    const isToday = selectedDate === todayStr;
+
+    let canFinish = false;
+    if (isToday && !isCompleted) {
+      if (isRotation) {
+        const activeTurn = turnData.turns.find(turn => !turn.isCompleted && !turn.isPending);
+        canFinish = activeTurn?.user === userName;
+      } else {
+        canFinish = userTotal < userRequiredTimes;
+      }
+    }
+
+    if (canFinish) {
+      const finishBtn = document.createElement("button");
+      finishBtn.className = "finished-btn";
+      finishBtn.textContent = "Finish Task";
+      finishBtn.addEventListener("click", (e) => {
+        e.stopPropagation();
+        finishTask(userName, task, selectedDate);
+      });
+      taskDiv.appendChild(finishBtn);
+    }
+
+    taskDiv.addEventListener("click", () => showTaskDetails(task, selectedDate));
+    userTasksDiv.appendChild(taskDiv);
+  }
+}
+
+
+
 
 
 
