--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -91,12 +91,7 @@
     .month-nav button:hover {
       background: #181816;
     }
-    .day-scroll-wrapper {
-      display: flex;
-      align-items: center;
-      padding: 5px 0;
-      overflow: hidden;
-    }
+  
     .scroll-btn {
       background: #e4e3e0;
       color: #181816;
@@ -105,27 +100,9 @@
       padding: 5px 10px;
       cursor: pointer;
     }
-    .day-scroll {
-      display: flex;
-      overflow-x: auto;
-      gap: 8px;
-      padding: 5px 10px;
-    }
-    .day {
-      min-width: 38px;
-      height: 38px;
-      line-height: 38px;
-      text-align: center;
-      border-radius: 50%;
-      background: #333;
-      color: #fff;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    .day.selected {
-      background: #131311;
-      color: #fff;
-    }
+ 
+
+ 
     .task-entry {
       background: #2A2B32;
       border: 2px solid #444754;
@@ -205,14 +182,55 @@
       border: 1px solid #444754;
       margin-top: 10px;
     }
-    .day-scroll::-webkit-scrollbar {
-      display: none;
-    }
-    .day-scroll {
-      -ms-overflow-style: none;
-      scrollbar-width: none;
-    }
-
+   
+ 
+    .day-scroll-wrapper {
+  display: flex;
+  align-items: center;
+  padding: 5px 0;
+  overflow: hidden;
+}
+.day-scroll {
+  display: flex;
+  overflow-x: auto;
+  gap: 8px;
+  padding: 5px 10px;
+}
+.day-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 38px;
+}
+.day-label {
+  font-size: 10px;
+  color: #333;
+  text-align: center;
+  margin-bottom: 2px;
+  font-weight: 600;
+}
+.day {
+  width: 38px;
+  height: 38px;
+  line-height: 38px;
+  text-align: center;
+  border-radius: 50%;
+  background: #333;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+}
+.day.selected {
+  background: #131311;
+  color: #fff;
+}
+.day-scroll::-webkit-scrollbar {
+  display: none;
+}
+.day-scroll {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
 
     .footer {
     position: fixed;
@@ -2274,64 +2292,74 @@ async function submitTaskCompletion(title, date, user) {
 
 
 
-
-
 function generateScrollableDates(monthOffset = 0) {
-    const container = document.getElementById("dayScrollContainer");
-    container.innerHTML = "";
+  const container = document.getElementById("dayScrollContainer");
+  container.innerHTML = "";
 
-    const today = new Date();
-    today.setDate(1);
-    today.setMonth(today.getMonth() + monthOffset);
+  const today = new Date();
+  today.setDate(1);
+  today.setMonth(today.getMonth() + monthOffset);
 
-    const currentMonth = today.getMonth();
-    const currentYear = today.getFullYear();
-    const daysInMonth = new Date(currentYear, currentMonth + 1, 0).getDate();
+  const currentMonth = today.getMonth();
+  const currentYear = today.getFullYear();
+  const daysInMonth = new Date(currentYear, currentMonth + 1, 0).getDate();
 
-    document.getElementById("monthLabel").textContent = today.toLocaleDateString(undefined, {
-        month: "long",
-        year: "numeric",
+  document.getElementById("monthLabel").textContent = today.toLocaleDateString(undefined, {
+    month: "long",
+    year: "numeric",
+  });
+
+  const todayStr = new Date().toLocaleDateString("sv-SE");
+  const dayAbbreviations = ["S", "Mo", "Tu", "We", "Th", "Fr", "St"];
+
+  for (let i = 1; i <= daysInMonth; i++) {
+    const date = new Date(currentYear, currentMonth, i);
+    const dayOfWeek = dayAbbreviations[date.getDay()]; // Get day abbreviation (Su, Mo, etc.)
+
+    const containerDiv = document.createElement("div");
+    containerDiv.className = "day-container";
+
+    const label = document.createElement("span");
+    label.className = "day-label";
+    label.textContent = dayOfWeek;
+
+    const btn = document.createElement("div");
+    btn.className = "day";
+    btn.textContent = i;
+    btn.dataset.date = `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, "0")}-${String(date.getDate()).padStart(2, "0")}`;
+
+    btn.addEventListener("click", () => {
+      document.querySelectorAll(".day").forEach(d => d.classList.remove("selected"));
+      btn.classList.add("selected");
+      selectedDate = btn.dataset.date;
+      loadTasks();
+      loadOverdueTasks();
+      loadPendingTasks();
+      loadYourTasks();
+      loadPendingRewardRequests();
     });
 
-    const todayStr = new Date().toLocaleDateString("sv-SE");
-
-    for (let i = 1; i <= daysInMonth; i++) {
-        const date = new Date(currentYear, currentMonth, i);
-        const btn = document.createElement("div");
-        btn.className = "day";
-        btn.textContent = i;
-        btn.dataset.date = `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, "0")}-${String(date.getDate()).padStart(2, "0")}`;
-
-        btn.addEventListener("click", () => {
-            document.querySelectorAll(".day").forEach(d => d.classList.remove("selected"));
-            btn.classList.add("selected");
-            selectedDate = btn.dataset.date;
-            loadTasks();
-            loadOverdueTasks();
-            loadPendingTasks();
-            loadYourTasks(); // Add this
-            loadPendingRewardRequests();
-        });
-
-        if (btn.dataset.date === todayStr) {
-            btn.classList.add("selected");
-            selectedDate = btn.dataset.date;
-            loadTasks();
-            loadOverdueTasks();
-            loadPendingTasks();
-            loadYourTasks(); // Add this
-            loadPendingRewardRequests();
-        }
-
-        container.appendChild(btn);
+    if (btn.dataset.date === todayStr) {
+      btn.classList.add("selected");
+      selectedDate = btn.dataset.date;
+      loadTasks();
+      loadOverdueTasks();
+      loadPendingTasks();
+      loadYourTasks();
+      loadPendingRewardRequests();
     }
 
-    setTimeout(() => {
-        const selected = document.querySelector(".day.selected");
-        if (selected) {
-            selected.scrollIntoView({ behavior: "smooth", inline: "center" });
-        }
-    }, 50);
+    containerDiv.appendChild(label);
+    containerDiv.appendChild(btn);
+    container.appendChild(containerDiv);
+  }
+
+  setTimeout(() => {
+    const selected = document.querySelector(".day.selected");
+    if (selected) {
+      selected.scrollIntoView({ behavior: "smooth", inline: "center" });
+    }
+  }, 50);
 }
 
 
