move settings lower in addtasks

--- a/mobile/4-Market/market.html
+++ b/mobile/4-Market/market.html
@@ -390,7 +390,7 @@ if (reward.assignedUsers && reward.assignedUsers.length > 0) {
 
 rewardItem.innerHTML = `
   <strong>${reward.name}</strong><br>
-  Honey: ${reward.diamonds} 🍯<br>
+  Buzz Points: ${reward.diamonds} 🍯<br>
   <small style="color: var(--accent-color); opacity: 0.8;">${assignedText}</small>
 `;
 
