add name of the days to all datepickers #2

--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -384,10 +384,11 @@
 .day-scroll {
     display: flex;
     overflow-x: auto;
-    padding: 6px 10px;
-    gap: 8px;
-    background: transparent;
+    padding: 8px 10px;
+    gap: 10px;
+    background: none;
     scroll-behavior: smooth;
+    width: 100%;
 }
 .day-container {
     display: flex;
