tasks section white design

--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -396,11 +396,10 @@
 .day-scroll {
     display: flex;
     overflow-x: auto;
-    padding: 8px 10px;
-    gap: 10px;
-    background: none;
+    padding: 6px 10px;
+    gap: 8px;
+    background: transparent;
     scroll-behavior: smooth;
-    width: 100%;
 }
 .day-container {
     display: flex;
@@ -448,6 +447,7 @@
 
 
 /* Date picker end point */
+
 
 
 
