--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -384,11 +384,10 @@
 .day-scroll {
     display: flex;
     overflow-x: auto;
-    padding: 8px 10px;
-    gap: 10px;
-    background: none;
+    padding: 6px 10px;
+    gap: 8px;
+    background: transparent;
     scroll-behavior: smooth;
-    width: 100%;
 }
 .day-container {
     display: flex;
